--- a/html/bonsai.html
+++ b/html/bonsai.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bonsai</title>
     <link rel="stylesheet" href="../css/bonsai.css" />
+
 </head>
 
 <body>
@@ -26,9 +27,43 @@
             </div>
         </nav>
     </header>
+    <main>
+
+        <section class="backdrop-container">
+            <div class="backdrop-blue"></div>
+        </section>
+        <section class="pricing-container">
+            <section class="pricing-top">
+                <h1 class="primary-text">Plans & Pricing</h1>
+                <div class="option-toggle-wrapper">
+                    <h4 class="option-toggle-monthly">MONTHLY</h4>
+                    <h4 class="option-toggle-button">Button</h4>
+                    <h4 class="option-toggle-yearly">Yearly</h4>
+                </div>
+            </section>
+            <section class="pricing-card-wrapper">
+                <div class="pricing-card starter-card">
+                    <div>Starter</div>
+                    <div>Starter</div>
+                    <div>Starter</div>
+                    <div>Starter</div>
+                    <div>Starter</div>
+                    <div>Starter</div>
+                    <div>Starter</div>
+                </div>
+                <div class="pricing-card professional-card">
+                    <div>Starter</div>
+                    <div>Starter</div>
+
+                </div>
+                <div class="pricing-card business-card">Business</div>
+
+            </section>
+        </section>
+    </main>
 </body>
-    <section class="backdrop-container">
-        <div class="backdrop-blue"></div>
-    </section>
+
+
+
 
 </html>
