--- a/html/bonsai.html
+++ b/html/bonsai.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bonsai</title>
     <link rel="stylesheet" href="../css/bonsai.css" />
-
 </head>
 
 <body>
@@ -16,8 +15,19 @@
                 src="http://web.archive.org/web/20221117021711im_/https://assets-global.website-files.com/58868bcd2ef4daaf0f072900/5e5fd7c602ca7cd432feb68e_bonsai-logo.svg"
                 alt="site-logo" />
             <div class="nav-links">
-                <div class="nav-link-item dropdown-nav-link">Product</div>
-                <div class="nav-link-item dropdown-nav-link">Templates</div>
+                <div class="nav-link-item dropdown-nav-link" id="product-dropdown-toggle">Product
+                    <div class="product-dropdown-menu">
+                        <div class="dropdown-item">Time Tracking</div>
+                        <div class="dropdown-item">Invoicing</div>
+                        <div class="dropdown-item">Contracts</div>
+                    </div>
+                </div>
+                <div class="nav-link-item dropdown-nav-link" id="template-dropdown-toggle">Templates
+                    <div class="template-dropdown-menu">
+                        <div class="dropdown-item">Invoice Template</div>
+                        <div class="dropdown-item">Contract Template</div>
+                    </div>
+                </div>
                 <div class="nav-link-item">Pricing</div>
                 <div class="nav-link-item">Reviews</div>
             </div>
@@ -29,22 +39,22 @@
     </header>
     <main>
 
-        <section class="backdrop-container">
+        <!-- <section class="backdrop-container">
             <div class="backdrop-blue"></div>
-        </section>
+        </section> -->
         <section class="pricing-container">
             <section class="pricing-top">
                 <h1 class="primary-text">Plans & Pricing</h1>
                 <div class="option-toggle-wrapper">
                     <h4 class="option-toggle-monthly">MONTHLY</h4>
-                    <h4 class="option-toggle-button">Button</h4>
+                    <button class="option-toggle-button">Button</button>
                     <h4 class="option-toggle-yearly">Yearly</h4>
                 </div>
             </section>
             <section class="pricing-card-wrapper">
                 <div class="pricing-card starter-card">
                     <div>Starter</div>
-                    <div>Starter</div>
+                    <div>Sssssssssssssssssssstarter</div>
                     <div>Starter</div>
                     <div>Starter</div>
                     <div>Starter</div>
@@ -61,9 +71,7 @@
             </section>
         </section>
     </main>
+    <script src="../js/bonsai.js"> </script>
+
 </body>
-
-
-
-
 </html>
