feat: bonsai add ons

--- a/static-frontend/html/bonsai.html
+++ b/static-frontend/html/bonsai.html
@@ -102,6 +102,7 @@
                     <div class="pc-start">START FREE</div>
                 </div>
                 <div class="pricing-card professional-card">
+                    <div class="most-popular-strip">MOST POPULAR</div>
                     <div class="pc-title">Professional</div>
                     <div class="pc-description">
                         Everything a growing independent <br> business needs to thrive.
@@ -192,7 +193,7 @@
                         <div class="tick-wrapper">
                             <img data-src="tick" alt="" />
                             <div class="feature-text">
-                                3 Team Seats (additional seats $9/month)
+                                3 Team Seats (additional seats 9/month)
                             </div>
                         </div>
                         <div class="tick-wrapper">
@@ -215,6 +216,41 @@
                     <div class="pc-start">START FREE</div>
                 </div>
             </section>
+        </section>
+        <section class="add-on-container">
+            <div class="add-on-title"> Super charge your work with add-ons
+            </div>
+            <div class="add-on-card-wrapper">
+                <div class="add-on-card">
+                    <div class="add-on-card-text">
+                        <div class="add-on-card-title">Collaborators</div>
+                        <div class="add-on-card-description">
+                            Invite other users to specific projects for limited access and functionality.
+                        </div>
+                    </div>
+                    <div class="add-on-card-price">Free</div>
+                </div>
+                <div class="add-on-card">
+                    <div class="add-on-card-text">
+                        <div class="add-on-card-title">Partners</div>
+                        <div class="add-on-card-description">
+                            Invite other users for full account access and company management.
+                        </div>
+                    </div>
+                    <div class="add-on-card-price">$9 <br> /month</div>
+                </div>
+                <div class="add-on-card">
+                    <div class="add-on-card-text">
+                        <div class="add-on-card-title">Bonsai Tax
+                        </div>
+                        <div class="add-on-card-description">
+                            Track expenses, identify write-offs, and estimate quarterly taxes easily.
+                        </div>
+                    </div>
+                    <div class="add-on-card-price"> <span>$</span>10 <br> month
+                    </div>
+                </div>
+
         </section>
     </main>
     <script src="../js/bonsai.js"></script>
