feat: bonsai- faq

--- a/static-frontend/html/bonsai.html
+++ b/static-frontend/html/bonsai.html
@@ -38,9 +38,9 @@
         </nav>
     </header>
     <main>
-        <section class="backdrop-container">
-            <div class="backdrop-blue"></div>
-        </section>
+        <!-- <section class="backdrop-container"> -->
+        <div class="backdrop-blue"></div>
+        <!-- </section> -->
         <section class="pricing-container">
             <section class="pricing-top">
                 <h1 class="primary-text">Plans & Pricing</h1>
@@ -237,7 +237,9 @@
                             Invite other users for full account access and company management.
                         </div>
                     </div>
-                    <div class="add-on-card-price">$9 <br> /month</div>
+                    <div class="add-on-card-price"> $9
+                        <span class="add-on-card-price-month">/month</span>
+                    </div>
                 </div>
                 <div class="add-on-card">
                     <div class="add-on-card-text">
@@ -247,12 +249,96 @@
                             Track expenses, identify write-offs, and estimate quarterly taxes easily.
                         </div>
                     </div>
-                    <div class="add-on-card-price"> <span>$</span>10 <br> month
+                    <div class="add-on-card-price"> $10
+                        <span class="add-on-card-price-month">/month</span>
                     </div>
                 </div>
 
         </section>
+        <section class="business-wrapper">
+            <div class="left-side-text">It's <span>your</span> business. <br>
+                We're here to help it grow.</div>
+            <div class="business-start-button">START FREE</div>
+        </section>
+        <section class="faq-container">
+            <div class="faq-title">Frequently Asked Questions</div>
+            <div class="faq-question-wrapper">
+                <div class="faq-question">How does the free trial work?</div>
+                <img data-src="dropdown_logo" alt="dropdown-logo">
+
+            </div>
+            <div class="faq-question-wrapper">
+                <div class="faq-question">Can I change plans anytime?
+                </div>
+                <img data-src="dropdown_logo" alt="dropdown-logo">
+
+            </div>
+            <div class="faq-question-wrapper">
+                <div class="faq-question">How do I pause my Bonsai subscription?</div>
+                <img data-src="dropdown_logo" alt="dropdown-logo">
+
+            </div>
+            <div class="faq-question-wrapper">
+                <div class="faq-question">What is your refund policy?</div>
+                <img data-src="dropdown_logo" alt="dropdown-logo">
+
+            </div>
+        </section>
     </main>
+    <footer>
+            <div class="footer-block">
+                <div class="footer-title">Product</div>
+                <div class="footer-link-block">
+                    <div class="footer-link">Proposals</div>
+                    <div class="footer-link">Contracts</div>
+                    <div class="footer-link">Invoicing</div>
+                    <div class="footer-link">Client CRM</div>
+                    <div class="footer-link">Time Tracking</div>
+                    <div class="footer-link">Task Tracking</div>
+                    <div class="footer-link">Forms</div>
+                    <div class="footer-link">Accounting</div>
+                    <div class="footer-link">Bonsai Tax</div>
+                    <div class="footer-link">Bonsai Cas</div>
+                    <div class="footer-link">Pricing</div>
+                    <div class="footer-link">Bonsai Reviews</div>
+                </div>
+            </div>
+            <div class="footer-block">
+                <div class="footer-title">Product</div>
+                <div class="footer-link-block">
+                    <div class="footer-link">Proposals</div>
+                    <div class="footer-link">Contracts</div>
+                    <div class="footer-link">Invoicing</div>
+                    <div class="footer-link">Client CRM</div>
+                    <div class="footer-link">Time Tracking</div>
+                    <div class="footer-link">Task Tracking</div>
+                    <div class="footer-link">Forms</div>
+                    <div class="footer-link">Accounting</div>
+                    <div class="footer-link">Bonsai Tax</div>
+                    <div class="footer-link">Bonsai Cas</div>
+                    <div class="footer-link">Pricing</div>
+                    <div class="footer-link">Bonsai Reviews</div>
+                </div>
+            </div>
+            <div class="footer-block">
+                <div class="footer-title">Product</div>
+                <div class="footer-link-block">
+                    <div class="footer-link">Proposals</div>
+                    <div class="footer-link">Contracts</div>
+                    <div class="footer-link">Invoicing</div>
+                    <div class="footer-link">Client CRM</div>
+                    <div class="footer-link">Time Tracking</div>
+                    <div class="footer-link">Task Tracking</div>
+                    <div class="footer-link">Forms</div>
+                    <div class="footer-link">Accounting</div>
+                    <div class="footer-link">Bonsai Tax</div>
+                    <div class="footer-link">Bonsai Cas</div>
+                    <div class="footer-link">Pricing</div>
+                    <div class="footer-link">Bonsai Reviews</div>
+                </div>
+            </div>
+
+    </footer>
     <script src="../js/bonsai.js"></script>
 </body>
 
