feat: fixed horizontal overflow for blue bd

--- a/static-frontend/html/bonsai.html
+++ b/static-frontend/html/bonsai.html
@@ -286,57 +286,70 @@
         </section>
     </main>
     <footer>
-            <div class="footer-block">
-                <div class="footer-title">Product</div>
-                <div class="footer-link-block">
-                    <div class="footer-link">Proposals</div>
-                    <div class="footer-link">Contracts</div>
-                    <div class="footer-link">Invoicing</div>
-                    <div class="footer-link">Client CRM</div>
-                    <div class="footer-link">Time Tracking</div>
-                    <div class="footer-link">Task Tracking</div>
-                    <div class="footer-link">Forms</div>
-                    <div class="footer-link">Accounting</div>
-                    <div class="footer-link">Bonsai Tax</div>
-                    <div class="footer-link">Bonsai Cas</div>
-                    <div class="footer-link">Pricing</div>
-                    <div class="footer-link">Bonsai Reviews</div>
-                </div>
+        <div class="footer-block">
+            <div class="footer-title">PRODUCT</div>
+            <div class="footer-link-block">
+                <div class="footer-link">Proposals</div>
+                <div class="footer-link">Contracts</div>
+                <div class="footer-link">Invoicing</div>
+                <div class="footer-link">Client CRM</div>
+                <div class="footer-link">Time Tracking</div>
+                <div class="footer-link">Task Tracking</div>
+                <div class="footer-link">Forms</div>
+                <div class="footer-link">Accounting</div>
+                <div class="footer-link">Bonsai Tax</div>
+                <div class="footer-link">Bonsai Cas</div>
+                <br>
+                <br>
+                <div class="footer-link">Pricing</div>
+                <div class="footer-link">Bonsai Reviews</div>
             </div>
-            <div class="footer-block">
-                <div class="footer-title">Product</div>
-                <div class="footer-link-block">
-                    <div class="footer-link">Proposals</div>
-                    <div class="footer-link">Contracts</div>
-                    <div class="footer-link">Invoicing</div>
-                    <div class="footer-link">Client CRM</div>
-                    <div class="footer-link">Time Tracking</div>
-                    <div class="footer-link">Task Tracking</div>
-                    <div class="footer-link">Forms</div>
-                    <div class="footer-link">Accounting</div>
-                    <div class="footer-link">Bonsai Tax</div>
-                    <div class="footer-link">Bonsai Cas</div>
-                    <div class="footer-link">Pricing</div>
-                    <div class="footer-link">Bonsai Reviews</div>
-                </div>
+        </div>
+        <div class="footer-block">
+            <div class="footer-title">FREE RESOURCES</div>
+            <div class="footer-link-block">
+                <div class="footer-link">Freelance Resources</div>
+                <div class="footer-link">Freelance Blog by Bonsai</div>
+                <div class="footer-link">How to Write a Contract</div>
+                <div class="footer-link">Online Signature Maker</div>
+                <br>
+                <div class="footer-link">Self Employed Taxes Hub</div>
+                <div class="footer-link">Self Employed Tax Calculator</div>
+                <div class="footer-link">Self Employed Tax Deductions</div>
+                <br>
+                <div class="footer-title">Templates</div>
+                <div class="footer-link">Invoice Templates</div>
+                <div class="footer-link">Proposal Templates</div>
+                <div class="footer-link">Contract Templates</div>
+                <div class="footer-link">Agreement Templates</div>
+                <div class="footer-link">Scope of Work Templates</div>
+                <div class="footer-link">Quote Templates</div>
+                <div class="footer-link">Credit Note Templates</div>
+                <div class="footer-link">Estimate Templates</div>
+                <div class="footer-link">Form Templates</div>
+
+
             </div>
-            <div class="footer-block">
-                <div class="footer-title">Product</div>
-                <div class="footer-link-block">
-                    <div class="footer-link">Proposals</div>
-                    <div class="footer-link">Contracts</div>
-                    <div class="footer-link">Invoicing</div>
-                    <div class="footer-link">Client CRM</div>
-                    <div class="footer-link">Time Tracking</div>
-                    <div class="footer-link">Task Tracking</div>
-                    <div class="footer-link">Forms</div>
-                    <div class="footer-link">Accounting</div>
-                    <div class="footer-link">Bonsai Tax</div>
-                    <div class="footer-link">Bonsai Cas</div>
-                    <div class="footer-link">Pricing</div>
-                    <div class="footer-link">Bonsai Reviews</div>
-                </div>
+        </div>
+        <div class="footer-block">
+            <div class="footer-title">BONSAI</div>
+            <div class="footer-link-block">
+                <div class="footer-link">About</div>
+                <div class="footer-link">Careers</div>
+                <div class="footer-link">Support</div>
+                <div class="footer-link">Linkedin</div>
+                <div class="footer-link">Twitter</div>
+                <div class="footer-link">Privacy Policy</div>
+                <div class="footer-link">Legal</div>
+                <br>
+                <br>
+                <div class="footer-link">Affiliates</div>
+                <div class="footer-link">Write for Us</div>
+                <br>
+                <br>
+                <div class="footer-link">Comparisons</div>
             </div>
+        </div>
 
     </footer>
     <script src="../js/bonsai.js"></script>
